Update version and gpg

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,8 @@ workflows:
 jobs:
   release:
     docker:
-      - image: cimg/go:1.17
+    # cimg/go 1.17.11
+      - image: cimg/go@sha256:59dc04ddc9782e566e5d1901c38ed4a7410ad4f724c42d17fa8b953d7c1fdfe6
     steps:
       - checkout
       - install-goreleaser-cli
@@ -29,8 +30,8 @@ commands:
       - run:
           name: Install GoReleaser tool
           command: |
-            VERSION=1.6.3
-            CHECKSUM=de0deb5518957e98cdd9134c450279e60773ab599a6dbf82179d4307a6603b08
+            VERSION=1.9.2
+            CHECKSUM=6089679e325a4cfc1d1374710dca99cd6f1f5ae4f351ceffa460d599432963d7
             ! command -v goreleaser || exit 0
             wget "https://github.com/goreleaser/goreleaser/releases/download/v${VERSION}/goreleaser_Linux_x86_64.tar.gz"
             echo "${CHECKSUM}" "goreleaser_Linux_x86_64.tar.gz" | sha256sum -c -
@@ -52,5 +53,4 @@ commands:
             echo "$GPG_KEY" \
             | base64 --decode --ignore-garbage \
             | gpg --batch --allow-secret-key-import --import
-            gpg --keyid-format LONG --list-secret-keys
             goreleaser release --rm-dist
