--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ workflows:
             branches:
               ignore: /.*/
             tags:
-              only: ^v\d+\.\d+\.\d+$
+              only: /^v\d+\.\d+\.\d+$/
           context:
             - hashicorp-terraform
 jobs:
